fix: maybe mkl is not visible to classpath because modules