@@ -34,4 +34,5 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs("--add-opens=java.base/java.nio=ALL-UNNAMED")
 }
